2003-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line-format, w3m-tab-line-timer,
	w3m-tab-line): Revive the timer operation.
	(w3m-tab-line): Wobble the window size to force redisplay of the
	header-line using a timer; include spinner images in the return
	value when external processes are running.
	(w3m-spinner-image-file): New variable.
	(w3m-spinner-image-frames): New variable.
	(w3m-spinner-image-index): New variable.
	(w3m-make-spinner-image): New function.

	* w3m-favicon.el (w3m-favicon-retrieve): Always redraw Emacs frame
	using the timer; wobble the window size instead of redrawing;
	increase the delay time for the timer.

2003-09-30  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-parse-and-fontify): Fix problem when form_int
	appears after input_alt and action is specified.

2003-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-symbol.el (w3m-mule-unicode-symbol): Fix customization type.

2003-09-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-symbol.el: Bind `w3m-output-coding-system' when compiling.
	(w3m-mule-unicode-symbol): New variable.
	(w3m-symbol): Add it for candidate.
	(w3m-symbol): Use it.

	* w3m.el (w3m-use-symbol): Check capability for
	`w3m-mule-unicode-symbol'.

2003-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line-format, w3m-tab-line-timer,
	w3m-tab-line): Remove the timer operation temporally.

2003-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-xmas.el (w3m-make-spinner-image): Bind `format-alist' to
	nil.

2003-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line-timer): New variable.
	(w3m-tab-line): Use it to control this function running too
	frequently; simplify the source code.

	* w3m-favicon.el (w3m-favicon-image-of): Abolish.
	(w3m-favicon-retrieve): Use a timer to redraw Emacs frame.

	* w3m-xmas.el (w3m-xmas-space-before-favicon): New user option.
	(w3m-xmas-space-before-spinner): New user option.