@@ -1,5 +1,7 @@
 2003-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-proc.el (w3m-process-stop): Redisplay the header-line.
+
 	* w3m-e21.el (w3m-tab-line-format, w3m-tab-line-timer,
 	w3m-tab-line): Revive the timer operation.
 	(w3m-tab-line): Wobble the window size to force redisplay of the
